# calendarBot

./: .calendarbot_lite.pid  .coveragerc  .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config-fast.yaml  .pre-commit-config.yaml  .roomodes  .yamllint  <MagicMock name='mock.database_file' id='134942283801872'>  <Mock name='mock.database_file' id='134711265754624'>  AGENTS.md  ALEXA_INTEGRATION_SUMMARY.md  ARCHITECTURE.md  BROWSER_MEMORY_LEAK_FIX_SUMMARY.md  CHANGELOG.md  CICD_SETUP.md  CI_CD_PATTERNS_FOR_TEST_SUITE.md  CLAUDE.bak  CLAUDE.md  CONTRIBUTING.md  DEBUG_INFRASTRUCTURE_ANALYSIS.md  DEPLOY.md  DEPLOYMENT_SUMMARY.md  DEVELOPER_QUICK_START_GUIDE.md  DEVELOPMENT.md  DOCKER.md  DOCUMENTATION_VERIFICATION.md  Dockerfile  ENHANCED_LOGGING_IMPLEMENTATION.md  HANGING_ISSUE_RESOLUTION_REPORT.md  ICS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INSTALL.md  INTERACTIVE_NAVIGATION.md  LOGGING_ARCHITECTURE.md  MIGRATION.md  MIGRATION_FROM_LEGACY_TESTS.md  Makefile  (+102 more)
.claude/: settings.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/agents/: documentation.md  ics-calendar-agent.md  linter-error-fixer.md  performance-agent.md  principal-engineer.md  security-agent.md
.claude/checkpoints/: 1754800369.json  1754800471.json  1754800473.json  1754800567.json  1754800569.json  1754800575.json  1754800577.json  1754802427.json  (+157 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.roo/: mcp.json
agent-projects/: README.md  doc-update-project.md
backup/: LEGACY_PACKAGING_REMOVAL.md  setup.py
calendarbot/: DEPRECATED.md  __init__.py  __main__.py  main.py  setup_wizard.py
calendarbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
calendarbot_epaper/: README.md  __init__.py  requirements.txt  setup.py  test_epaper.py
calendarbot_lite/: README.md  __init__.py  __main__.py  alexa_exceptions.py  alexa_handlers.py  alexa_models.py  alexa_precompute_stages.py  alexa_presentation.py  alexa_protocols.py  alexa_registry.py  alexa_response_cache.py  alexa_skill_backend.py  alexa_ssml.py  alexa_types.py  alexa_utils.py  async_utils.py  config.yaml.example  config_loader.py  config_manager.py  debug_helpers.py  dependencies.py  event_filter.py  event_prioritizer.py  fetch_orchestrator.py  http_client.py  lite-perf-refactor.md  lite-perf-report.md  lite_attendee_parser.py  lite_datetime_utils.py  lite_event_merger.py  lite_event_parser.py  lite_fetcher.py  lite_logging.py  lite_models.py  lite_parser.py  lite_parser_telemetry.py  lite_rrule_expander.py  lite_streaming_parser.py  monitoring_logging.py  morning_summary.py  (+11 more)
config/: __init__.py  config.yaml  config.yaml.example  ics_config.py  settings.py
coverage/: clover.xml  coverage-final.json  index.html  junit.xml  lcov.info
docs/: ALEXA_CODE_REVIEW_2025-11-04.md  ALEXA_DEPLOYMENT_GUIDE.md  ALEXA_GITHUB_ISSUES_2025-11-04.md  ALEXA_INTEGRATION.md  ALEXA_LAMBDA_SECURITY_ASSESSMENT.md  ALGORITHMS.md  ARCHITECTURE.md  CALENDAR_PARSING_REVIEW_2025-11-05.md  CHANGELOG.md  CICD_ANALYSIS_REPORT.md  CONTEXT.md  DATETIME_OVERRIDE.md  DEPLOY.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  DOCUMENTATION_VERIFICATION.md  INSTALL.md  INTERACTIVE_NAVIGATION.md  KIOSK_VERIFICATION.md  LOGGING.md  MORNING_SUMMARY_API.md  PIPELINE_ARCHITECTURE.md  PI_ZERO_2_MONITORING_GUIDE.md  PRE_COMMIT_WORKFLOW.md  RATE_LIMITING.md  README.md  REFACTORING_SUMMARY.md  RRULE_EXPANSION_ARCHITECTURE.md  RRULE_EXPANSION_SPECIFICATION.md  SECURITY_RECOMMENDATIONS.md  SETUP.md  SUMMARY.md  TESTING.md  TESTING_GUIDE.md  USAGE.md  USER_STORIES.md  USER_STORIES_EINK_300x400.md  WORKFLOW_CONCURRENCY.md  deduplication-performance.md  exchange-ics-spec.md  (+3 more)
framebuffer_ui/: INSTALL_TTY_KIOSK.md  README.md  __init__.py  __main__.py  api_client.py  calendarbot-display@.service  config.py  install-framebuffer-ui.sh  install-tty-kiosk.sh  layout_engine.py  main.py  renderer.py  start-framebuffer-kiosk.sh  test_components.py  test_visual.py
kiosk/: EPIPHANY-KIOSK.md  README.md  WATCHDOG_INSTALLATION.md  install-config.example.yaml  install-kiosk.sh  install.sh  test-config.yaml
logs/: test_logging.conf
project-plans/: README.md  architecture-comparison.md  lightweight-ui-architecture.md  lightweight-ui-summary.md
scripts/: __init__.py  benchmark_eink_renderer.py  benchmark_html_renderer.py  clean_coverage.sh  clear_asset_cache.py  clear_hidden_events.py  coverage_enforcement.py  create_perf_smoke_workflow.sh  debug_accessibility_focus.js  debug_countdown_issue.py  debug_currentmeeting_scope.test.js  debug_display_test_failures.py  debug_epaper_html_content.py  debug_headers.py  debug_install_failure.sh  debug_method_signature.py  debug_morning_summary.py  debug_morning_summary_fixed.py  debug_pytest_failures.py  debug_recurring_events.py  debug_reverse_proxy.py  debug_server_access.py  debug_timezone_calculation.py  debug_variable_scope.js  demo_launch_summary_in_progress.py  dev_setup.py  diagnose_html_to_png_issue.py  diagnose_timezone_issue.py  docker-quickstart.sh  find_dead_code.py  fix_nginx_proxy.sh  fix_ssl_caddy.py  generate_coverage_badge.py  http_only_caddyfile  kill_calendarbot.sh  local_cert_caddyfile  performance_benchmark.py  phase_2_benchmark_results.json  quick_kill.sh  real_ics_performance_test.py  (+25 more)
test_venv/: pyvenv.cfg
tests/: COVERAGE.md  README.md  TEST_COVERAGE_SUMMARY.md  ci_performance_benchmark.py  ci_test_runner.py  conftest.py  coverage_analysis.py  layout_removal_test_report.md  pytest.ini  run_tests.py  test_alexa_integration.py  test_benchmarking.py  test_build_config.py  test_calendarbot_lite_cli.py  test_calendarbot_watchdog.py  test_coverage_analysis.py  test_lite_runner.py  test_monitoring_environment_toggle.py  test_monitoring_scripts_integration.py  test_performance_monitoring.py  test_runtime_tracker.py  test_streaming_ics_parser.py  test_thread_pool.py  test_whats_next_p0_functions_simple.test.js
tools/: build_context.py
whats-next-project/: ARCHITECTURE.md  DEVELOPMENT_LOG.md  SETUP_COMPLETE.md
(+1056 files in other folders)
