[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "calendarbot"
dynamic = ["version"]
description = "ICS Calendar Display Bot with unified e-paper and web rendering modes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CalendarBot Team", email = "support@calendarbot.local"}
]
maintainers = [
    {name = "CalendarBot Team", email = "support@calendarbot.local"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: System :: Hardware",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Communications",
    "Framework :: AsyncIO",
]
keywords = [
    "calendar",
    "ics",
    "microsoft365",
    "outlook",
    "google-calendar",
    "e-ink",
    "display",
    "web-interface",
    "async"
]
requires-python = ">=3.12"
dependencies = [
    "icalendar>=5.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.8.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "cryptography>=41.0.0",
    "APScheduler>=3.10.0",
    "psutil>=5.8.0",
    # Cache dependencies for optimization
    "cachetools>=5.0.0",
    "diskcache>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "pytest-testmon>=2.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
epaper = [
    "Pillow>=9.0.0",
    "numpy>=1.20.0",
    "html2image>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/calendarbot/calendarbot"
Documentation = "https://github.com/calendarbot/calendarbot#readme"
Repository = "https://github.com/calendarbot/calendarbot"
"Bug Tracker" = "https://github.com/calendarbot/calendarbot/issues"
Changelog = "https://github.com/calendarbot/calendarbot/blob/main/CHANGELOG.md"

[project.scripts]
calendarbot = "calendarbot.__main__:main"

[project.gui-scripts]
# Future GUI entry points can be added here

[tool.setuptools]
package-dir = {"" = "."}
packages = {find = {}}

[tool.setuptools.package-data]
calendarbot = [
    "py.typed",
    "web/static/*.css",
    "web/static/*.js",
    "web/static/*.ico",
    "web/static/shared/**/*.css",
    "web/static/shared/**/*.js",
    "web/static/layouts/**/*.css",
    "web/static/layouts/**/*.js",
    "web/static/layouts/**/*.json",
    "web/templates/*.html",
    "theme-images/*.bmp",
    "config/config.yaml.example",
]
calendarbot_lite = [
    "*.html",
    "*.css",
    "*.js",
]

[tool.setuptools.dynamic]
version = {attr = "calendarbot.__version__"}

# Development tool configurations
[tool.ruff]
# Ruff configuration for linting and formatting
line-length = 100
target-version = "py312"

# Exclude directories
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
    "env",
    "tests",
    "calendarbot/display/epaper/drivers",
]

# Linting configuration
[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "N",    # pep8-naming
    "C4",   # flake8-comprehensions
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # Pylint
    "TRY",  # tryceratops
    "PERF", # Perflint
    "RUF",  # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "T201",    # 'Print' found
    "E402",    # Module level import not at top of file
    "E501",    # Line too long (handled by formatter)
    "PLR0912", # Too many branches (complexity)
    "PLR0913", # Too many arguments to function call
    "PLR0915", # Too many statements (complexity)
    "PLR2004", # Magic value used in comparison
    "PLC0415", # Import should be at top-level of file
    "PLW0602", # Using global for variable but no assignment is done
    "PLW0603", # Using global statement is discouraged (needed for health tracking)
    "PERF203", # try-except within loop incurs performance overhead
    "PTH123",  # open() should be replaced by Path.open() (not always appropriate)
    "UP045",   # Use X | None instead of Optional[X] (personal preference)
    "TRY003",  # Avoid specifying long messages outside the exception class
    "ARG002",  # Unused method argument (common in overrides)
    "PT012",   # pytest.raises() block should contain a single simple statement
    "B008",    # Do not perform function calls in argument defaults (common in FastAPI)
    "TRY300",  # Consider moving statement to an else block
    "W293",    # Blank Line Contains Whitespace
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "S101", "PLR2004", "SLF001"]
"scripts/*" = ["T20", "PLR0913"]
"conftest.py" = ["ARG001"]

# Import sorting configuration (replaces isort)
[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
known-first-party = ["calendarbot"]

# Pylint configuration
[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

# Formatter configuration (replaces black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
# Bandit security analysis configuration
# Only scan the calendarbot package directory, ignore everything else
include = ["calendarbot"]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = [
    "B101",  # Test for use of assert
    "B601",  # Parameterized shell calls (we validate inputs)
    "B603",  # Subprocess without shell - validated subprocess usage with input sanitization
    "B404",  # Subprocess module import - we use validated subprocess calls with proper security
]
severity = "medium"  # Flag medium and high severity issues
confidence = "medium"  # Flag medium and high confidence issues

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true
# Exclude build artifacts, test files, and utility scripts from strict type checking
# Also exclude the archived calendarbot/ directory (active project is calendarbot_lite/)
exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
    "tests/",
    "backup/",
    "scripts/",
    "calendarbot/"
]

[[tool.mypy.overrides]]
module = [
    "icalendar.*",
    "aiosqlite.*",
    "APScheduler.*",
    "PIL.*",
]
ignore_missing_imports = true

# Relax strict type checking for calendarbot_lite modules with complex parser types
# These modules deal with dynamic icalendar parsing and complex type inference
[[tool.mypy.overrides]]
module = "calendarbot_lite.*"
# Allow returning Any where type system can't infer complex types
warn_return_any = false
# Allow unreachable code for defensive programming patterns
warn_unreachable = false

[tool.pytest.ini_options]
# Consolidated pytest configuration (migrated from pytest.ini)
minversion = "7.0"

# Test discovery settings — restrict discovery to lite tests so VS Code shows only them
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Exclude problematic directories from test discovery
norecursedirs = [
    "deprecated_calendarbot_tests",
    "bad_unit_tests",
    "backup",
    ".git",
    "__pycache__",
    ".pytest_cache",
    "*.egg-info",
    "MagicMock"
]

# Comprehensive test execution options (merged from both files)
addopts = [
    "-ra",                    # Show extra test summary info for all except passed
    "--strict-markers",       # Treat unregistered markers as errors
    "--strict-config",        # Treat configuration errors as errors
    "--verbose",              # Verbose output
    "--tb=short",             # Short traceback format
    "--maxfail=5",            # Reduce max failures to prevent resource exhaustion
    "--durations=10",         # Show 10 slowest tests
    "--import-mode=importlib", # Use importlib mode to avoid namespace conflicts
    # Memory management options to prevent OOM kills
    "--disable-warnings",     # Reduce memory from warning objects
]

# Async test support
asyncio_mode = "auto"

# Resource management settings to prevent memory exhaustion
junit_duration_report = "call"  # Reduce memory usage from duration tracking
junit_logging = "no"            # Disable junit logging to save memory

# Console logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Warning filters (comprehensive approach)
filterwarnings = [
    "error",                              # Convert warnings to errors by default
    "ignore::UserWarning",                # Ignore user warnings
    "ignore::DeprecationWarning",         # Ignore deprecation warnings
    "ignore::RuntimeWarning",             # Ignore runtime warnings
    "ignore::PendingDeprecationWarning",  # Ignore pending deprecation warnings
    "ignore::ResourceWarning",            # Ignore resource warnings
    "ignore::ImportWarning",              # Ignore import warnings
    "ignore::FutureWarning",              # Ignore future warnings
]

# Comprehensive test markers (merged from both configurations)
markers = [
    # Basic test categories
    "unit: Fast unit tests",
    "integration: Integration tests requiring external dependencies",
    "e2e: End-to-end tests for complete workflows",
    
    # Browser and UI testing
    "browser: Browser-based validation tests",
    "accessibility: Accessibility and WCAG compliance tests",
    "cross_browser: Cross-browser compatibility tests",
    "visual_regression: Visual regression and screenshot comparison tests",
    "responsive: Responsive design and viewport tests",
    
    # Security and network
    "security: Security-focused tests and vulnerability checks",
    "network: Tests that require network access",
    
    # Performance and execution characteristics
    "performance: Performance and load tests",
    "memory: Memory usage and resource leak tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: Quick-executing tests (under 30 seconds)",
    
    # CI/CD and workflow
    "critical_path: Core functionality tests for CI/CD pipeline (fast execution)",
    "critical: Critical path tests for CI/CD",
    "smoke: Basic functionality verification tests",
    "regression: Full regression testing",
    "targeted: Tests selected based on code changes",
    
    # Coverage and validation
    "coverage: Tests specifically for coverage validation",
    
    # Timeout markers for long-running tests
    "timeout: Tests with specific timeout requirements",
]

[tool.coverage.run]
# Comprehensive coverage configuration (migrated from .coveragerc)
source = ["calendarbot_lite"]
branch = true
parallel = true

# Note: include is not needed when source is set - source already specifies what to include

# Files to exclude from coverage analysis
omit = [
    # Exclude all test directories and files
    "tests/*",
    "tests/lite/*",
    "tests/lite_tests/*",
    "*/tests/*",
    "*/test_*",
    "test_*.py",
    "**/test_*.py",
    "*/conftest.py",
    "conftest.py",

    # Exclude build artifacts and environments
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/migrations/*",

    # Exclude scripts and setup files
    "scripts/*",
    "setup.py",
    "manage.py",
    "format_and_stage.py",

    # Exclude archived calendarbot directory (deprecated - use calendarbot_lite)
    "calendarbot/*",
]

[tool.coverage.report]
# Coverage reporting options with quality thresholds
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Minimum coverage thresholds and reporting options
fail_under = 5
precision = 2
show_missing = true
skip_covered = false
skip_empty = true

[tool.coverage.html]
# HTML report configuration
directory = "htmlcov"
title = "CalendarBot Test Coverage Report"

[tool.coverage.xml]
# XML report for CI integration
output = "coverage.xml"
